etmc: in-game P2P multiplayer over EasyTier (Fabric/NeoForge/Forge/Paper) + docs site + CI
In-game P2P multiplayer for MC 1.21.10 using EasyTier's FFI in no-TUN/userspace
mode — no port-forwarding, no admin. Host/join via code or an etmc:// link pasted
into Add Server / Direct Connect (custom netty channel rides the data plane, no
loopback port).

- common/: EasyTier FFI (reflection facade over java.lang.foreign), no-TUN session,
  EtmcChannel data-plane transport (off-event-loop writer thread), join codes,
  status parsing (cost-based p2p/relay, conn-stats latency).
- Client UI shared via mc-common (Mojmap) for NeoForge/Forge and a Fabric twin:
  host/join/connect screens, HUD, /etmc commands, "Establishing P2P connection"
  screen (waits for a direct route, "Join now anyway" + timeout fallback to relay),
  error/notice screen; leaves the network on disconnect.
- Mixins: etmc:// address support + reroute (Forge needs MixinConfigs manifest).
- paper/: dedicated-server plugin (config.yml generator on the site).
- site/: Astro static docs + in-browser config generator (player TOML + Paper YAML),
  deployed as a Cloudflare Worker.
- CI: builds FFI natives for Windows/Linux/macOS (easytier/full) and all loader
  jars, with native + cargo + Gradle caching.